# codex-desktop-linux

./: .gitignore  AGENTS.md  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  index.html  justfile  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: implementation-plan.md  product-scope.md  protocol-baseline.md  release-requirements.md  technical-design.md  test-plan.md  visual-design.md  visual-regression.md
scripts/: assemble-release.mjs  finalize-appimage.sh  generate-protocol-code.mjs  generate-protocol-schema.sh  sign-release.sh  smoke-linux-package.sh  smoke-real-app-server.mjs  visual-regression.mjs
src/: App.test.tsx  App.tsx  main.tsx  tauriConfiguration.test.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: app-events.json  app-windows.json  configuration.json  configured-connection.json  local-stdio.json  remote-websocket.json  window-controls.json
src-tauri/linux/: codex-desktop.desktop
src-tauri/migrations/: 0001_configuration.sql  0002_credential_cleanup.sql  0003_window_runtime.sql  0004_thread_cache.sql  0005_preferences.sql  0006_drafts.sql  0007_saved_prompts.sql  0008_drop_thread_cache.sql
src-tauri/permissions/: configuration.toml  configured-connection.toml  local-stdio.toml  remote-websocket.toml  window.toml
src-tauri/src/: authentication_policy.rs  deep_link.rs  diagnostics.rs  dialogs.rs  drafts.rs  header_policy.rs  lib.rs  local_data.rs  main.rs  offline_cache.rs  preferences.rs  saved_prompts.rs  sensitive.rs  storage.rs  window_state.rs  windows.rs
src-tauri/src/configuration/: commands.rs  connection_plan.rs  credential_model.rs  credential_service.rs  mod.rs  model.rs  repository.rs
src-tauri/src/connection/: configured.rs  connection_id.rs  http_connect.rs  lifecycle.rs  local_stdio.rs  mod.rs  remote_websocket.rs  shared_pool.rs  socks5.rs  ssh_tunnel.rs
src-tauri/src/connection/testdata/: http-connect-ca.der.b64  http-connect-server-key.der.b64  http-connect-server.der.b64
src-tauri/src/credentials/: mod.rs  plaintext_file_store.rs  preferred_store.rs  secret_service_store.rs
(+292 files in other folders)
