[package]
name = "codex-desktop-linux"
version = "0.1.3"
description = "Codex Desktop client for Linux"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "codex_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
base64 = "=0.22.1"
fast-socks5 = { version = "=1.0.0", default-features = false }
futures-util = { version = "=0.3.32", features = ["sink"], default-features = false }
http-body-util = "=0.1.3"
hyper = { version = "=1.8.1", features = ["client", "http1"], default-features = false }
hyper-util = { version = "=0.1.20", features = ["tokio"], default-features = false }
rustls = { version = "=0.23.41", features = ["ring", "std", "tls12"], default-features = false }
rustls-native-certs = "=0.8.4"
rustix = { version = "=1.1.4", features = ["fs", "process"] }
rfd = { version = "=0.15.4", default-features = false, features = ["tokio", "xdg-portal"] }
russh = { version = "=0.62.2", features = ["ring", "rsa"], default-features = false }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
secret-service = { version = "=5.1.0", features = ["rt-tokio-crypto-rust"], default-features = false }
sqlx = { version = "=0.8.6", features = ["macros", "migrate", "runtime-tokio", "sqlite"], default-features = false }
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-single-instance = "=2.4.3"
tokio = { version = "=1.52.3", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "=0.26.4", features = ["ring", "tls12"], default-features = false }
tokio-tungstenite = { version = "=0.29.0", features = ["handshake"], default-features = false }
tokio-util = { version = "=0.7.18", features = ["rt"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
url = "=2.5.8"
uuid = { version = "=1.23.5", features = ["serde", "v4"] }
zeroize = "=1.9.0"
zbus = { version = "=5.13.2", features = ["tokio"], default-features = false }
